@@ -49,7 +49,7 @@ var vboxSettingsAudioDrivers = {
 
 
 /* Disable non-editable items when VM is running */
-$('#vboxSettingsDialog').one('dataLoaded',function(){
+$('#vboxSettingsDialog').bind('dataLoaded',function(){
 	
 	/*
 	 * Load audio controller types
@@ -91,7 +91,7 @@ $('#vboxSettingsDialog').one('dataLoaded',function(){
 	$(document.forms['frmVboxSettings'].vboxSettingsAudioDriver).val($('#vboxSettingsDialog').data('vboxMachineData').audioAdapter.audioDriver);
 	$(document.forms['frmVboxSettings'].vboxSettingsAudioController).val($('#vboxSettingsDialog').data('vboxMachineData').audioAdapter.audioController);
 	
-	$(document.forms['frmVboxSettings'].vboxSettingsAudioEnabled).prop('checked',$('#vboxSettingsDialog').data('vboxMachineData').audioAdapter.enabled);
+	$(document.forms['frmVboxSettings'].vboxSettingsAudioEnabled).prop('checked',$('#vboxSettingsDialog').data('vboxMachineData').audioAdapter.enabled).click();
 
 	var p = $(document.forms['frmVboxSettings'].vboxSettingsAudioController).closest('table'); 
 	if(!$('#vboxSettingsDialog').data('vboxFullEdit')) {
